29/1/14
  Code tidy up in terminate() and readkeysapps.c

29/1/14
  Add new function "terminate" for keyboard shortcut to
  close any open windows, exit the window manager and shutdown(1)
  or reboot(2)

5/12/13
  Add minimum size for window when resizing with keyboard
   in stacking mode

31/10/13
  Fix for windows not moving desktops with multiple monitors
   in stacking mode

22/10/13
  Fix for focus not changing when transient window had focus
   and current window was clicked on

20/10/13
  Fix for focus not changing with one open window and a
   transient window

15/10/13
  Better window management with transient windows open
    - can now cycle through all open windows with the keyboard

6/10/13
  Fix for failed start with Xinerama info not available

28/9/13
  Added transparency value for the bar and an option for
   it in the config

15/9/13
  Make sure the right transient window has the input focus
   when changing desktops.

7/5/13
  Added option to use apps' name for setting desktop to open on
   and/or size e.g. urxvt -name "Ralph"

22/4/13
  Fix for TOO many destroy_notify events from mozilla products -
   remove update_current() from remove_client().
  Option to show the bar in rc.conf actually does something now...

21/4/13
  Fix for firefox menus disappearing when moving entries

13/4/13
  Fix for the window colours not updating when updating config.

23/3/13
  Added marker in desktop switcher for previous desktop

22/3/13
  Check number of windows before doing anything else in prev_win

18/3/13
  Updated Makefile

11/3/13
  Don't decrement nmaster when client is removed

4/3/13
  Check for a window manager already running
  Option to set the initial number of extra windows in the master area for
   each desktop in rc.conf

2/3/12
  Enable multimedia keys by default
  Add NULL for using no modifier key
  Don't change mode with windows open on update
  Remove desktop showing/flicker in fullscreen mode when changing
   desktops

25/2/13